--- a/i3/config
+++ b/i3/config
@@ -180,19 +180,19 @@ client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color       
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3blocks
-	position top
-	colors {
-		background $bg-color
-		statusline $text-color
-		separator #757575
-		#		   border             background         text
-		focused_workspace  $bg-color             $bg-color            $text-color 
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
+#bar {
+#       status_command i3blocks
+#	position top
+#	colors {
+#		background $bg-color
+#		statusline $text-color
+#		separator #757575
+#		#		   border             background         text
+#		focused_workspace  $bg-color             $bg-color            $text-color 
+#		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+#		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+#	}
+#}
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
@@ -211,5 +211,6 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
 exec --no-startup-id pactl set-sink-volume 85%
 for_window [class="^.*"] border pixel 3
 exec --no-startup-id compton
-
+exec --no-startup-id mopidy
+exec --no-nostartup-id yabar
 gaps inner 10
