--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -25,9 +25,9 @@
 #
 ##### connection settings #####
 #
-mpd_host = localhost
+#mpd_host = localhost
 #
-mpd_port = 6600
+#mpd_port = 6600
 #
 #mpd_connection_timeout = 5
 #
@@ -493,54 +493,37 @@ mpd_port = 6600
 ## depending on the ncurses version used.
 ##
 #
-#colors_enabled = yes
+colors_enabled = yes
 #
-#empty_tag_color = cyan
+empty_tag_color = blue
 #
-#header_window_color = default
+header_window_color = white
 #
-#volume_color = default
+volume_color = default
 #
-#state_line_color = default
+state_line_color = cyan
 #
-#state_flags_color = default
+state_flags_color = red
 #
-#main_window_color = yellow
+main_window_color = green
 #
-#color1 = white
+color1 = white
 #
-#color2 = green
+color2 = blue
 #
-#main_window_highlight_color = yellow
+main_window_highlight_color = blue
 #
-#progressbar_color = black
+progressbar_color = yellow
 #
-#progressbar_elapsed_color = green
+progressbar_elapsed_color = yellow
 #
-#statusbar_color = default
+statusbar_color = cyan
 #
-#alternative_ui_separator_color = black
+alternative_ui_separator_color = black
 #
-#active_column_color = red
+active_column_color = red
 #
-#window_border_color = green
+window_border_color = red
 #
-#active_window_border = red
+active_window_border = red
 #
-colors_enabled                        = "yes"
-empty_tag_color                       = "blue"
-header_window_color                   = "white"
-display_volume_level                  = "yes"
-state_line_color                      = "cyan"
-state_flags_color                     = "magenta"
-main_window_color                     = "green"
-main_window_highlight_color           = "blue"
-color1                                = "white"
-color2                                = "blue"
-progressbar_color                     = "black"
-statusbar_color                       = "cyan"
-active_column_color                   = "red"
-window_border_color                   = "red"
-active_window_border                  = "red"
-follow_now_playing_lyrics             = "yes"
-clock_display_seconds = "yes"
