--- a/mopidy/mopidy.conf
+++ b/mopidy/mopidy.conf
@@ -114,6 +114,8 @@
 enabled = true
 username = screamsshatter
 password = ladrIN!@34
+client_id = 08fd6b16-7a4a-49a3-a245-32fe1495223d
+client_secret = foMZ22AbLm5MgSFxxWgiqfX0ZJn84NbLqZXBm7YTSNM=
 bitrate = 320
 #volume_normalization = true
 #private_session = false
