--- a/i3/config
+++ b/i3/config
@@ -10,14 +10,14 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-
+set $wallpaper alena-aenami-s41k.jpg
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango:Fira Code 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -91,24 +91,24 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 
-bindsym $mod+2 workspace 
-bindsym $mod+3 workspace 
-bindsym $mod+4 workspace 
-bindsym $mod+5 workspace #
-bindsym $mod+6 workspace *
+bindsym $mod+1 workspace A
+bindsym $mod+2 workspace B
+bindsym $mod+3 workspace C
+bindsym $mod+4 workspace D
+bindsym $mod+5 workspace E
+bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 
-bindsym $mod+Shift+2 move container to workspace 
-bindsym $mod+Shift+3 move container to workspace 
-bindsym $mod+Shift+4 move container to workspace 
-bindsym $mod+Shift+5 move container to workspace #
-bindsym $mod+Shift+6 move container to workspace *
+bindsym $mod+Shift+1 move container to workspace A
+bindsym $mod+Shift+2 move container to workspace B
+bindsym $mod+Shift+3 move container to workspace C
+bindsym $mod+Shift+4 move container to workspace D
+bindsym $mod+Shift+5 move container to workspace E
+bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
@@ -146,15 +146,14 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
 # Window Border Settings
 new_window pixel 3
 
 # Window Colors
 # class                 border  backgr. text    indicator child_border
-client.focused          #ffffff #ffffff #333333 #ffffff   #ffffff
+client.focused          #c3c3c3 #333333 #ffffff   #ffffff
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.unfocused        #666666 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
@@ -162,31 +161,43 @@ client.background       #ffffff
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        i3bar_command i3bar -t
-	status_command i3blocks
-	position bottom
-	colors{
-		background #28282860
-		focused_workspace #28282860 #28282860 #ffffff
-		inactive_workspace #28282860 #28282860 #555555	
-		
-		
-	}
-}
+#bar {
+#	i3bar_command ~/i3-lemonbar/i3_lemonbar.py	
+#	}
 #exec --no-startup-id yabar
-gaps inner 5
-gaps outer 0
-for_window [class="^.*"] border pixel 0
+#exec_always killall polybar
+#exec_always --no-startup-id polybar phase
+exec_always --no-startup-id killall syndaemon
+exec_always --no-startup-id syndaemon -i 0.2 -K -t -d
+gaps inner 15
+gaps outer 10
+for_window [class="^.*"] border pixel 1
 
-exec --no-startup-id feh --bg-scale ~/Downloads/wallpaper3.jpg
+#Wallpaper
+exec_always --no-startup-id feh --bg-fill ~/Downloads/$wallpaper
 exec --no-startup-id compton -b --config ~/.config/compton.conf
-bindsym $mod+Shift+m exec --no-startup-id mopidy
+exec_always --no-startup-id ~/scripts/general/startup
+exec --no-startup-id ibus-daemon -dx
 
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 -- +10% && killall -SIGUSR1 i3status
-bindsym Mod4+comma exec --no-startup-id amixer set Master -q 5%- unmute
-bindsym Mod4+period exec --no-startup-id amixer set Master -q 5%+ unmute
+bindsym Mod4+comma exec --no-startup-id amixer set Master -q 5%- unmute && pkill -RTMIN+1 i3blocks
+bindsym Mod4+period exec --no-startup-id amixer set Master -q 5%+ unmute && pkill -RTMIN+1 i3blocks
+
+bindsym $mod+Shift+comma exec --no-startup-id sudo ~/scripts/general/backlight -
+bindsym $mod+Shift+period exec --no-startup-id sudo ~/scripts/general/backlight +
+
+
 #bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset 'Master'
 #bindsym $mod+shift+l exec --no-startup-id i3lock
 #
 #bindsym $mod+Ctrl+e exec --no-startup-id $ECLIPSE_HOME/./eclimd 
+#
+exec_always --no-startup-id xrandr --dpi 220
+exec_always --no-startup-id xset s off
+exec_always --no-startup-id xset -dpms
+exec_always --no-startup-id xset s noblank
+#exec --no-startup-id parity daemon /tmp/parity-daemon.pid --mode active --warp
+#
+#Lock Settings
+bindsym Mod4+Shift+p exec --no-startup-id ~/scripts/general/lock.sh
+
