--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -331,7 +331,7 @@
 #
 ## Available values: classic, alternative.
 ##
-#user_interface = classic
+user_interface = alternative
 #
 #data_fetching_delay = yes
 #
@@ -493,37 +493,37 @@
 ## depending on the ncurses version used.
 ##
 #
-colors_enabled = yes
+#colors_enabled = yes
 #
-empty_tag_color = blue
+#empty_tag_color = blue
 #
-header_window_color = white
+#header_window_color = white
 #
-volume_color = default
+#volume_color = default
 #
-state_line_color = cyan
+#state_line_color = cyan
 #
-state_flags_color = red
+#state_flags_color = red
 #
-main_window_color = green
+#main_window_color = green
 #
-color1 = white
+#color1 = white
 #
-color2 = blue
+#color2 = blue
 #
-main_window_highlight_color = blue
+#main_window_highlight_color = blue
 #
-progressbar_color = yellow
+#progressbar_color = yellow
 #
-progressbar_elapsed_color = yellow
+#progressbar_elapsed_color = yellow
 #
-statusbar_color = cyan
+#statusbar_color = cyan
 #
-alternative_ui_separator_color = black
+#alternative_ui_separator_color = black
 #
-active_column_color = red
+#active_column_color = red
 #
-window_border_color = red
+#window_border_color = red
 #
-active_window_border = red
+#active_window_border = red
 #
